# surrealdb.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSurrealdb.c.cmake  FindUnity.cmake  helpers.cmake  surrealdb.cppConfig.cmake.in
examples/modules/: CMakeLists.txt  main.cpp
examples/no_modules/: CMakeLists.txt  main.cpp
src/surreal.cpp/: CMakeLists.txt
src/surreal.cpp/modules/: surrealdb.cppm
src/surreal.cpp/private/surrealdb/: surrealdb.cpp
src/surreal.cpp/public/surrealdb/: surrealdb.hpp
src/surreal.cpp/public/surrealdb/api/: api.hpp
src/surrealdb_cpp/: CMakeLists.txt
src/surrealdb_cpp/include/surrealdb/: connection.hpp  surrealdb.hpp
src/surrealdb_cpp/include/surrealdb/api/: api.hpp
src/surrealdb_cpp/include/surrealdb/types/: result.hpp
src/surrealdb_cpp/modules/: surrealdb.cppm
src/surrealdb_cpp/modules/surrealdb/: internal.cppm  surrealdb.cppm
src/surrealdb_cpp/private/: connection.cpp  hello_surreal.cpp  internal_impl.hpp
tests/: CMakeLists.txt  surrealdb_cpp_tests.c
